// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Container renders successfully 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "primaryColor",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "screenBackgroundColor",
          },
        ]
      }
    >
      <View
        style={
          Object {
            "backgroundColor": "screenBackgroundColor",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;

exports[`components/Container renders successfully with its header 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "primaryColor",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "screenBackgroundColor",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "height": 50,
            },
            Object {
              "backgroundColor": "primaryColor",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "flex": 1,
              },
              Object {
                "minWidth": 150,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginLeft": undefined,
                  "paddingLeft": 4,
                  "paddingTop": 1,
                  "textAlign": "center",
                },
                Object {
                  "color": "#fff",
                },
              ]
            }
          >
            App header
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "screenBackgroundColor",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;

exports[`components/Container renders successfully with its header and Back button 1`] = `
<View
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    collapsable={true}
    pointerEvents="box-none"
    style={
      Object {
        "flex": 1,
      }
    }
  >
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 0,
          },
          Object {
            "backgroundColor": "primaryColor",
          },
        ]
      }
    />
    <SafeAreaView
      style={
        Array [
          Object {
            "flex": 1,
          },
          Object {
            "backgroundColor": "screenBackgroundColor",
          },
        ]
      }
    >
      <View
        style={
          Array [
            Object {},
            Object {
              "alignSelf": "flex-start",
              "flexDirection": "row",
              "height": 50,
            },
            Object {
              "backgroundColor": "primaryColor",
            },
          ]
        }
      >
        <View
          style={
            Object {
              "alignItems": "flex-start",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        >
          <TouchableOpacity
            activeOpacity={0.5}
            rounded={true}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderBottomWidth": null,
                "borderColor": "#007aff",
                "borderLeftWidth": null,
                "borderRadius": 57,
                "borderRightWidth": null,
                "borderTopWidth": null,
                "borderWidth": undefined,
                "elevation": 0,
                "flexDirection": "row",
                "height": 45,
                "justifyContent": "center",
                "paddingBottom": 6,
                "paddingHorizontal": 5,
                "paddingTop": 6,
                "shadowColor": null,
                "shadowOffset": null,
                "shadowOpacity": null,
                "shadowRadius": null,
                "width": 200,
              }
            }
            transparent={true}
          >
            <Text
              allowFontScaling={false}
              style={
                Array [
                  Object {
                    "color": "#fff",
                    "fontSize": 25,
                  },
                  Object {
                    "marginLeft": 10,
                    "marginRight": 10,
                  },
                  Object {
                    "fontFamily": "Material Design Icons",
                    "fontStyle": "normal",
                    "fontWeight": "normal",
                  },
                  Object {},
                ]
              }
            >
              
            </Text>
          </TouchableOpacity>
        </View>
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "alignSelf": "center",
                "flex": 1,
              },
              Object {
                "minWidth": 150,
              },
            ]
          }
        >
          <Text
            numberOfLines={1}
            style={
              Array [
                Object {
                  "color": "#000",
                  "fontFamily": "System",
                  "fontSize": 17,
                  "fontWeight": "700",
                  "marginLeft": undefined,
                  "paddingLeft": 4,
                  "paddingTop": 1,
                  "textAlign": "center",
                },
                Object {
                  "color": "#fff",
                },
              ]
            }
          >
            App header
          </Text>
        </View>
        <View
          style={
            Object {
              "alignItems": "flex-end",
              "alignSelf": "center",
              "flex": 1,
            }
          }
        />
      </View>
      <View
        style={
          Object {
            "backgroundColor": "screenBackgroundColor",
          }
        }
      />
    </SafeAreaView>
  </View>
</View>
`;
